# quant

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  pyproject.toml  requirements-lock.txt
.claude/: settings.local.json
.claude/plans/: phase-4a-milestone-1-regime-harness.plan.md  phase-4a-milestone-2-label-ablation.plan.md  phase-4a-milestone-3-regime-features.plan.md  phase-4a-milestone-4-feature-catalog.plan.md  phase-4a-milestone-5-fred-leakage.plan.md  phase-4a-milestone-6-exit-gate.plan.md
.claude/prds/: b1-target-reframing.prd.md  b2-conformal-relevance.prd.md  b2-oos-attribution.prd.md  b3-options-implied.prd.md  c1-live-data.prd.md  c2-lean-paper.prd.md  c3-sizing-risk.prd.md  c4-confidence.prd.md  c6-strategy-registry.prd.md  phase-4a-feature-and-label-redesign.prd.md
data/: ledger.yaml
docs/: AGENT_OPERATION.md  B1_REPORT.md  CONTRIBUTING.md  ENV.md  METHODOLOGY.md  PHASE_1_BACKTESTER.md  PHASE_2.5_FEATURE_IMPROVEMENT.md  PHASE_2_MODELING.md  PHASE_3_SENTIMENT.md  PHASE_4A_REPORT.md  PHASE_4A_RETROSPECTIVE.md  PHASE_5_AGENTS.md  PRIORITIES.yaml  PROJECT_ROADMAP.md  REFACTOR_PORTFOLIO_UNION_INDEX.md
docs/concepts/: cost-model.md  data-freshness-slas.md  evaluation-standards.md  feature-glossary.md  fred-publication-lag.md  freshness-monitor.md  label-schemes.md  lean-setup.md  metrics-glossary.md  oos-attribution.md  purging-and-embargo.md  regime-evaluation.md  strategy-registry.md  target-evaluation.md  target-reframing.md
docs/historical/: PHASE_0_INFRASTRUCTURE.md  PHASE_1_BACKTESTER.md  PHASE_3_SENTIMENT.md  PHASE_4_ADVANCED.md  PHASE_DELIVERY_NOTES.md
docs/project-e/: DECISIONS.md  E-STRATEGIES-PANEL.md  E1-research-trust-console.prd.md  E1_CLOSEOUT.md  E2-console-api.prd.md  E3-live-monitoring.prd.md  E4-data-market-status.prd.md
docs/project-e/mockups/: console.css  research-trust-console.html
frontend/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/scripts/: copy-export.mjs
frontend/src/: App.tsx  main.tsx  nav.ts  vite-env.d.ts
frontend/src/hooks/: useAsyncData.ts
notebooks/: 01_system_tour.ipynb  02_phase2_modeling.ipynb  03_model_interpretation.ipynb  04_phase3_sentiment.ipynb  05_phase4a_regime_harness.ipynb  06_phase4a_label_ablation.ipynb  07_phase4a_fred_leakage.ipynb  08_phase4a_feature_ablation.ipynb  09_phase4a_exit_gate.ipynb  10_b1_target_ablation.ipynb  11_b1_exit_gate.ipynb  13_c1_live_data.ipynb  16_c2_execution.ipynb
scripts/: backfill.py  c2_hello_world.py  diag_edgar.py  e1_closeout_check.sh  monitor_freshness.py  reconcile_paper_backtest.py  run_b1_arms.py  run_b2_attribution.py  run_phase4a_arms.py  trade_daily.py  validate_catalog.py
src/quant/: __init__.py  config.py  ledger.py
tests/: conftest.py  test_ablation.py  test_attribution.py  test_backtest.py  test_c2_hello_world.py  test_catalog.py  test_config.py  test_console.py  test_cross_sectional.py  test_edgar.py  test_features.py  test_finbert.py  test_flows.py  test_ingest_alpaca.py  test_ingest_fred.py  test_ingest_tiingo.py  test_integration.py  test_label_schemes.py  test_lean_bridge.py  test_ledger.py  test_models.py  test_monitor_freshness.py  test_phase4a_runner.py  test_portfolio_harness.py  test_priorities.py  test_realtime.py  test_reconciliation.py  test_regime_metrics.py  test_regimes.py  test_rss.py  test_run_b1_arms.py  test_run_b2_attribution.py  test_sentiment.py  test_statistics.py  test_storage.py  test_strategy_registry.py  test_target_eval.py  test_targets.py  test_trade_daily.py
(+112 files in other folders)
