[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "0.1.0"
description = "Phase 0: data ingestion pipeline and local data lake"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",          # orchestration: flows, tasks, retries, scheduling
    "pandas>=2.2",           # working dataframe (ecosystem interop)
    "polars>=1.0",           # fast ETL dataframe, Arrow-native (optional but recommended)
    "pyarrow>=16",           # Parquet engine for the data lake
    "duckdb>=1.0",           # SQL query layer over the Parquet lake
    "pydantic-settings>=2.0",# typed config loaded from .env
    "pandera>=0.20",         # dataframe schema validation at ingestion
    "alpaca-py>=0.30",       # Alpaca official SDK (equity bars)
    "tiingo>=0.16",          # Tiingo client (EOD prices)
    "fredapi>=0.5",          # FRED client (macro series)
    "pandas-market-calendars>=4.4",  # trading-day calendar
    "httpx>=0.27",           # HTTP client for any source without an SDK
    "loguru>=0.7",           # readable logging
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "ipykernel", "jupyterlab"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
