[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "0.1.0"
description = "Quant research platform: data lake, backtest harness, and walk-forward CV"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.0",          # orchestration: flows, tasks, retries, scheduling
    "pandas>=2.2",           # working dataframe (ecosystem interop)
    "polars>=1.0",           # fast ETL dataframe, Arrow-native (optional but recommended)
    "pyarrow>=16",           # Parquet engine for the data lake
    "duckdb>=1.0",           # SQL query layer over the Parquet lake
    "pydantic-settings>=2.0",# typed config loaded from .env
    "pandera>=0.20",         # dataframe schema validation at ingestion
    "alpaca-py>=0.30",       # Alpaca official SDK (equity bars)
    "tiingo>=0.16",          # Tiingo client (EOD prices)
    "fredapi>=0.5",          # FRED client (macro series)
    "pandas-market-calendars>=4.4",  # trading-day calendar
    "httpx>=0.27",           # HTTP client for any source without an SDK
    "loguru>=0.7",           # readable logging
    "scikit-learn>=1.4",     # ML models for signal generation and backtesting
    "xgboost>=2.0",          # gradient boosted trees for GBM model
    "numpy>=1.26",           # numerical computing (pinned via pandas/sklearn anyway)
    "matplotlib>=3.8",       # plotting for research notebooks
]

[project.scripts]
# Research console CLI (E1). Activates on the next editable install; until then
# use the module form `python -m quant.console export`.
console = "quant.console.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipykernel",
    "jupyterlab",
    "nbstripout>=0.6",       # strips notebook outputs before git commit
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires live API credentials (skipped by default; pass --integration to run)",
]
